# game-guide-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile.cloud  Dockerfile.service  README.md  config.py  conftest.py  docker-compose.e2e.yml  docker-compose.yml  plan.md  pyproject.toml  test_config.py  test_packaging.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ci.md  deploy-gcp.md  dnd-corpus-expansion-eval-2026-06-08.md  dnd-embedding-guide.md  dnd-extraction-spike.md  dnd-full-corpus-expansion-2026-06-08.md  dnd-pdf-parsing-guide.md  dnd-rag-ingestion.md  dnd-reranker-eval-2026-06-08.md  dnd-retrieval-eval-report-2026-06-08.md  dnd-retrieval-eval-report.md
docs/archive/: dnd-rag-plan-2026-05.md
docs/forge/: README.md
docs/forge/plans/: dnd-agent-service.md  dnd-chat-ui.md  dnd-corpus-full-5e-expansion.md  dnd-cross-encoder-reranker.md  dnd-extraction-quality-audit.md  dnd-monster-decollapse.md  dnd-scan-extraction-fix.md  game-guide-ai-ui-metrics.md  game-guide-channel-chats.md  rag-chat-aetheril-overhaul.md  rag-chat-mode-scope-dedup.md  rag-chat-observability-evals.md  rag-chat-python-packaging.md  rag-chat-service-typesafety.md  vgm-quarantine-rate-regression.md
docs/forge/reports/: dnd-agent-service-plan-review.md  dnd-agent-service-ship.md  dnd-chat-ui-plan-review.md  dnd-chat-ui-ship.md  dnd-corpus-full-5e-expansion-plan-review.md  dnd-corpus-full-5e-expansion-ship.md  dnd-cross-encoder-reranker-plan-review.md  dnd-cross-encoder-reranker-ship.md  dnd-extraction-quality-audit-plan-review.md  dnd-extraction-quality-audit-ship.md  dnd-monster-decollapse-plan-review.md  dnd-monster-decollapse-ship.md  dnd-scan-extraction-fix-plan-review.md  dnd-scan-extraction-fix-ship.md  game-guide-ai-ui-metrics-plan-review.md  game-guide-ai-ui-metrics-ship.md  game-guide-ai-ui-polish-ship.md  game-guide-channel-chats-ship.md  rag-chat-aetheril-overhaul-ship.md  rag-chat-mode-scope-dedup-ship.md  rag-chat-python-packaging-ship.md  rag-chat-service-typesafety-ship.md  vgm-quarantine-rate-regression-plan-review.md  vgm-quarantine-rate-regression-ship.md
docs/forge/research/: dnd-agent-service.md  dnd-chat-ui.md  dnd-corpus-full-5e-expansion.md  dnd-cross-encoder-reranker.md  dnd-extraction-quality-audit.md  dnd-monster-decollapse.md  dnd-scan-extraction-fix.md  game-guide-ai-ui-metrics.md  game-guide-channel-chats.md  phb-ocr-t-family-fix.md  rag-chat-aetheril-overhaul-app-shell-users.md  rag-chat-aetheril-overhaul-chat-modes.md  rag-chat-aetheril-overhaul-design-system.md  rag-chat-aetheril-overhaul.md  rag-chat-mode-scope-dedup.md  rag-chat-observability-evals.md  rag-chat-python-packaging.md  rag-chat-service-typesafety.md  vgm-quarantine-rate-regression.md
docs/observability/: OVERVIEW.md  answer-eval.md  dashboard.md  eval-strategy.md  metrics-standard.md  phase0-langfuse-decision.md
ingestion/: README.md  build_vocab.py  chunks-dmg-5e.jsonl  chunks-eberron-5e.jsonl  chunks-eberron-5e.qa.json  chunks-eepc-5e.jsonl  chunks-eepc-5e.qa.json  chunks-mm-5e.jsonl  chunks-mm-5e.qa.json  chunks-mtf-5e.jsonl  chunks-mtf-5e.qa.json  chunks-phb-5e.jsonl  chunks-phb-5e.qa.json  chunks-ravnica-5e.jsonl  chunks-ravnica-5e.qa.json  chunks-scag-5e.jsonl  chunks-scag-5e.qa.json  chunks-tce-5e.jsonl  chunks-tce-5e.qa.json  chunks-tortle-5e.jsonl  chunks-tortle-5e.qa.json  chunks-vgm-5e.jsonl  chunks-vgm-5e.qa.json  chunks-xge-5e.jsonl  chunks-xge-5e.qa.json  chunks.jsonl  compare_models.py  embed.py  eval_answers.py  eval_golden.py  eval_results.json  extract.py  extract_scan.py  gen_golden.py  golden_entities.json  golden_set.json  ingest_books.py  metrics_summary.py  ocr_normalize.py  qa_chunks.py  (+17 more)
ingestion/tests/: test_compare_models.py  test_eval_answers.py  test_eval_golden.py  test_extract_scan.py  test_golden_entities.py  test_metrics_summary.py  test_retrieval.py
scripts/: deploy.sh  up.sh
scripts/ci/: eval_gate.py
scripts/gcp/billing_killswitch/: main.py  requirements.txt
scripts/gcp/tests/: test_billing_killswitch.py
service/: README.md  __init__.py  app.py  attachments.py  e2e_app.py  generate.py  graph.py  history.py  metrics.py  models.py  rag.py  test_app.py  test_graph.py  test_service.py  test_tracing.py  tracing.py
service/tests/: test_app.py  test_attachments.py  test_ci_workflow.py  test_e2e_app.py  test_graph.py  test_history.py  test_metrics.py  test_service.py  test_tracing.py
spikes/: extract-bun.ts  extract_pdfplumber.py  langgraph_langfuse_spike.py  requirements-spike.txt
tests/: test_config.py  test_deploy_contract.py  test_eval_gate.py  test_packaging.py
ui/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  playwright.config.ts  vite.config.ts
ui/.storybook/: preview.tsx
ui/e2e/: app.spec.ts  compose.ts  global-setup.ts  global-teardown.ts  performance-budget.json  performance.ts
ui/src/: App.css  App.tsx  api.test.ts  api.ts  exportChat.test.ts  exportChat.ts  index.css  main.tsx  smoke.test.ts  smoke.test.tsx  useChat.test.tsx  useChat.ts
ui/src/components/: ChatForm.tsx  ExchangeView.tsx  SourceList.tsx  components.test.tsx
ui/src/ds/: Avatar.css  Avatar.stories.tsx  Avatar.test.tsx  Avatar.tsx  Badge.css  Badge.stories.tsx  Badge.test.tsx  Badge.tsx  Button.css  Button.stories.tsx  Button.test.tsx  Button.tsx  Card.css  Card.stories.tsx  Card.test.tsx  Card.tsx  ChatMessage.css  ChatMessage.stories.tsx  ChatMessage.test.tsx  ChatMessage.tsx  Chip.css  Chip.stories.tsx  Chip.test.tsx  Chip.tsx  DiceRoll.css  DiceRoll.stories.tsx  DiceRoll.test.tsx  DiceRoll.tsx  IconButton.css  IconButton.stories.tsx  IconButton.test.tsx  IconButton.tsx  Switch.css  Switch.stories.tsx  Switch.test.tsx  Switch.tsx  TextField.css  TextField.stories.tsx  TextField.test.tsx  TextField.tsx  (+5 more)
ui/src/metrics/: metrics.test.ts  metrics.ts
ui/src/shell/: AppHeader.css  AppHeader.test.tsx  AppHeader.tsx  AppNav.tsx  ChatPane.css  ChatPane.test.tsx  ChatPane.tsx  ConversationStoreContext.tsx  (+28 more)
vector-db/: README.md  verify_db.py
vector-db/init/: 01-extensions.sql  02-schema.sql  03-hybrid-search.sql  04-chat-schema.sql
(+8 files in other folders)
