[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-chat"
version = "1.0.0"
description = "D&D 5e RAG chat — FastAPI service + ingestion pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "psycopg[binary]",
    "pydantic",
    # LangGraph orchestration of the RAG pipeline (ziw.2 / Phase 1); langfuse
    # tracing is added in CP3. The generate node calls langchain-openai ChatOpenAI
    # (CP2), which pulls langchain-core (messages) as a transitive dep.
    "langgraph>=0.2,<0.4",
    "langchain-openai>=0.2,<0.4",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[tool.setuptools]
# Explicit list — do NOT auto-discover (would pull ui/, vector-db/, spikes/, docs/).
packages = ["service", "ingestion"]
# Top-level single-file module: the centralized RAG tuning config (02t.3),
# imported by both service and ingestion. Must ship in `pip install .`.
py-modules = ["config"]

[tool.pytest.ini_options]
# Puts the repo root on sys.path so `import service` / `import ingestion` resolve
# from a plain checkout with no install (pytest >= 7). Covers "pytest from repo root".
pythonpath = ["."]
