[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-chat"
version = "1.0.0"
description = "D&D 5e RAG chat — FastAPI service + ingestion pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "psycopg[binary]",
    "pydantic",
    # Observability migration (ziw.2 / Phase 1). All declared explicitly so a clean
    # `pip install .` can actually trace (env-gated via RAG_TRACING, off by default):
    #   - langgraph: the RAG pipeline graph
    #   - langchain-core: SystemMessage/HumanMessage used directly in generate.py
    #   - langchain-openai: ChatOpenAI generate node
    #   - langchain (meta) + langfuse: REQUIRED by `from langfuse.langchain import
    #     CallbackHandler` in service/tracing.py — langchain-core alone is NOT enough.
    "langgraph>=0.2,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-openai>=0.2,<0.4",
    "langchain>=0.3,<0.4",
    "langfuse>=3,<4",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]
# Answer-quality eval (ziw.3) — heavy + dev/CI-only, so NOT a core dependency
# (the FastAPI service must not pull it). Run: uv run --with '.[eval]' python
# ingestion/eval_answers.py. The offline unit tests use a fake evaluator and need
# nothing here.
eval = [
    "ragas>=0.4,<0.5",
]

[tool.setuptools]
# Explicit list — do NOT auto-discover (would pull ui/, vector-db/, spikes/, docs/).
packages = ["service", "ingestion"]
# Top-level single-file module: the centralized RAG tuning config (02t.3),
# imported by both service and ingestion. Must ship in `pip install .`.
py-modules = ["config"]

[tool.pytest.ini_options]
# Puts the repo root on sys.path so `import service` / `import ingestion` resolve
# from a plain checkout with no install (pytest >= 7). Covers "pytest from repo root".
pythonpath = ["."]
