[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "game-guide-ai"
version = "1.0.0"
description = "D&D 5e RAG chat — FastAPI service + ingestion pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "psycopg[binary]",
    "pydantic",
    # Observability migration (ziw.2 / Phase 1). All declared explicitly so a clean
    # `pip install .` can actually trace (env-gated via RAG_TRACING, off by default):
    #   - langgraph: the RAG pipeline graph
    #   - langchain-core: SystemMessage/HumanMessage used directly in generate.py
    #   - langchain-openai: ChatOpenAI generate node
    #   - langchain (meta) + langfuse: REQUIRED by `from langfuse.langchain import
    #     CallbackHandler` in service/tracing.py — langchain-core alone is NOT enough.
    "langgraph>=0.2,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-openai>=0.2,<0.4",
    "langchain>=0.3,<0.4",
    "langfuse>=3,<4",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]
# Answer-quality eval (ziw.3) — heavy + dev/CI-only, so NOT a core dependency
# (the FastAPI service must not pull it). Run: uv run --with '.[eval]' python
# ingestion/eval_answers.py. The offline unit tests use a fake evaluator and need
# nothing here.
eval = [
    "ragas>=0.4,<0.5",
    # Local generator for the model A/B (ziw.4): gpt-4o-mini (API) vs gemma4:12b
    # (Ollama). ChatOllama construction needs no server; only running the
    # comparison does. `ollama pull gemma4:12b` (~8GB) + Ollama 0.22+.
    "langchain-ollama>=0.2,<0.4",
]
# Gated cross-encoder rerank in the live service (1em.1). Heavy (pulls torch),
# so opt-in twice: install this extra AND set RAG_RERANK=1 (see config.py).
# Without the extra, RAG_RERANK=1 degrades to no reranker with a warning.
rerank = [
    "sentence-transformers>=3,<6",
]
# PDF extraction (fitz engine) — dev/CI-only, so NOT a core dependency (the
# FastAPI service must not pull it). Pinned to an EXACT version (not a range):
# every extraction run was previously `uv run --with pymupdf ...` with no
# constraint at all, so `uv` could silently resolve a different pymupdf
# release each run — confirmed on disk (two different cached releases,
# 1.27.2.3 and 1.28.0) and a likely contributor to the VGM/Tortle bad_entity
# quarantine drift (agent-forge-harness-wu1). Run:
#   uv run --with '.[extract]' python ingestion/extract_scan.py <pdf> --book-slug <slug>
# pdfplumber (the mm-5e/dmg-5e engine) stays ad-hoc via `--with pdfplumber` —
# out of scope for this pin.
extract = [
    "pymupdf==1.28.0",
]

[tool.setuptools]
# Explicit list — do NOT auto-discover (would pull ui/, vector-db/, spikes/, docs/).
packages = ["service", "ingestion"]
# Top-level single-file module: the centralized RAG tuning config (02t.3),
# imported by both service and ingestion. Must ship in `pip install .`.
py-modules = ["config"]

[tool.pytest.ini_options]
# Puts the repo root on sys.path so `import service` / `import ingestion` resolve
# from a plain checkout with no install (pytest >= 7). Covers "pytest from repo root".
pythonpath = ["."]
